--- a/src/css/gem-table.css
+++ b/src/css/gem-table.css
@@ -47,3 +47,12 @@
           line-height: 44px;
               font-size: 1.5em;
 }
+
+.gem-cell {
+  opacity: 1;
+  transition: opacity 1s;
+}
+
+.gem-cell.transparent {
+  opacity: 0;
+}
