--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,6 +3,10 @@ body {
   background-color: #fee9aa;
 }
 
+.top-row {
+  padding: 5px 0 0 5px
+}
+
 .preview-image {
   position: absolute;
   top: 0px;
@@ -21,4 +25,69 @@ body {
 .fade-appear.fade-appear-active {
   opacity: 1;
   transition: opacity .8s ease-in;
+}
+
+.drawer {
+  border-bottom: 1px solid #777;
+  padding-bottom: 3px;
+  box-shadow: 0px 5px 14px -5px #7e5f01;
+  transition: height .5s;
+  height: 0;
+  overflow: hidden;
+}
+
+.drawer.open {
+  height: 105px;
+}
+
+.drawer .drawer-contents {
+  padding-top:5px;
+}
+
+.drawer-handle-wrapper {
+  position: relative;
+}
+
+.drawer-handle {
+  position: absolute;
+  width: 112px;
+  height: 7px;
+  background-color: #fee9aa;
+  z-index: 2;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0;
+  top: -1px;
+  border: 1px solid #777;
+  border-top: 1px solid #fee9aa;
+  border-radius: 0 0 10px 10px;
+  box-shadow: 0px 5px 14px -5px #7e5f01;
+  padding: 6px;
+}
+
+.drawer-handle hr {
+  margin: 3px 0;
+}
+.drawer-handle hr:first-child {
+  margin-top: -3px;
+}
+
+.drawer .tips {
+  display: flex;
+  background-color: rgba(255,255,255,0.7);
+  width: 1016px;
+  display: flex;
+  margin: 9px 0 0 37px;
+}
+
+.drawer .tips .tips-title {
+  align-self: center;
+  font-weight: bold;
+  padding-left: 10px;
+}
+
+.drawer .tips .tip-word {
+  font-weight: bold;
+  text-decoration: underline;
 }
