--- a/src/css/main.css
+++ b/src/css/main.css
@@ -7,9 +7,31 @@ body {
   padding: 5px 0 0 5px
 }
 
+.right-panel-wrapper {
+  width: 100%;
+  padding-left: 20px;
+  position: relative;
+}
+
+.right-panel-wrapper .description {
+  background-color: rgba(255,255,255,0.7);
+}
+
+.right-panel-wrapper>div {
+  position: relative;
+  width: 80%;
+  min-width: 500px;
+  height: 208px;
+  margin-bottom: 10px;
+}
+
 .preview-image {
   position: absolute;
   top: 0px;
+  margin-left: auto;
+  margin-right: auto;
+  left: 0;
+  right: 0
 }
 .preview-image:hover {
   opacity: 0.5
@@ -51,7 +73,7 @@ body {
 .drawer-handle {
   position: absolute;
   width: 112px;
-  height: 7px;
+  height: 3px;
   background-color: #fee9aa;
   z-index: 2;
   margin-left: auto;
@@ -70,7 +92,7 @@ body {
   margin: 3px 0;
 }
 .drawer-handle hr:first-child {
-  margin-top: -3px;
+  margin-top: -7px;
 }
 
 .drawer .tips {
