Add categories for activity, headings, hourglass

--- a/src/css/gem-table.css
+++ b/src/css/gem-table.css
@@ -56,3 +56,13 @@
 .gem-cell.transparent {
   opacity: 0;
 }
+
+.table-section-heading {
+  background-color: white;
+  border: 1px solid #CCC;
+  padding: 0 0 3px 10px;
+  font-family: sans-serif;
+  font-variant: small-caps;
+  font-size: 1.1em;
+  line-height: 0.8;
+}
