--- a/src/css/main.css
+++ b/src/css/main.css
@@ -12,8 +12,8 @@ body {
 }
 
 .right-panel-wrapper {
-  width: 100%;
-  padding-left: 20px;
+  width: 130%;
+  padding: 20px;
   position: relative;
 }
 
