--- a/src/css/main.css
+++ b/src/css/main.css
@@ -13,7 +13,7 @@ body {
 
 .right-panel-wrapper {
   width: 130%;
-  padding: 20px;
+  padding: 20px 0 0 5px;
   position: relative;
 }
 
@@ -24,7 +24,7 @@ body {
 .right-panel-wrapper>div {
   position: relative;
   width: 80%;
-  min-width: 500px;
+  min-width: 400px;
   height: 208px;
   margin-bottom: 10px;
 }
