--- a/src/css/chart.css
+++ b/src/css/chart.css
@@ -61,3 +61,9 @@
 .chart .x-axis.narrow {
   margin-left: 29%;
 }
+
+.concept-chart-top-bar {
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
