--- a/src/css/main.css
+++ b/src/css/main.css
@@ -2,7 +2,7 @@ body {
   margin: 0;
   background-color: #fee9aa;
   color: #333;
-  font-family: Helvetica Neue, Helvetica, Arial, sans-serif;
+  font-family: Helvetica, Arial, sans-serif;
   font-size:0.9em;
 }
 
