--- a/src/css/main.css
+++ b/src/css/main.css
@@ -201,9 +201,9 @@ button:hover {
   transform: translate(-50%, -50%);
   width: 640px;
   max-width: 100%;
-  height: 640px;
+  height: 6660px;
   max-height: 100%;
-  overflow: scroll;
+  overflow: none;
   padding: 20px;
   z-index: 1100;
   border: 5px solid #fee9aa;
