--- a/src/css/main.css
+++ b/src/css/main.css
@@ -199,12 +199,12 @@ button:hover {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 640px;
+  width: 680px;
   max-width: 100%;
-  height: 6660px;
+  height: 700px;
   max-height: 100%;
-  overflow: none;
-  padding: 20px;
+  overflow: auto;
+  padding: 20px 20px 0 20px;
   z-index: 1100;
   border: 5px solid #fee9aa;
 }
